# image_task

./: .gitignore  README.md  YOLO onnx模型推理.md  start.sh
src/: turtlesim.yaml
src/camera/: CMakeLists.txt  package.xml
src/camera/config/: normal_camera.yaml  realsense_camera.yaml
src/camera/src/: main.cpp  normal_camera.cpp  normal_camera.hpp  normal_entry.cpp  realsense_camera.cpp  realsense_camera.hpp  realsense_entry.cpp
src/detect/: package.xml  setup.py
src/detect/config/: yolo_detect.yaml
src/detect/detect/: test.py  yolo.py
src/detector/: CMakeLists.txt  detector.xml  package.xml
src/detector/config/: detect_node.yaml
src/detector/include/detector/: detect_node.hpp  nanodet.h  yolov8_pose.h
src/detector/include/detector/plugins/: dashboard_detector.hpp
src/detector/plugins/: dashboard_detector.cpp  nanodet.cpp  yolov8_pose.cpp
src/detector/src/: detect_node.cpp  main.cpp
src/image_task_core/: CMakeLists.txt  package.xml
src/image_task_core/include/image_task_core/: base_detector.hpp
src/interface/: CMakeLists.txt  package.xml
src/interface/msg/: ObjectDashboard.msg
src/interface/srv/: DetectDashboard.srv  ObjectDetect.srv  TarState.srv
src/task_launch/: CMakeLists.txt  package.xml
src/task_launch/launch/: normal_yolo_detect.launch.py  realsense_yolo_detect.launch.py
